@@ -518,6 +518,8 @@ namespace libtorrent
 			m_send_buffer.append_buffer(buffer, size, size, destructor);
 		}
 
+		virtual void append_const_send_buffer(char const* buffer, int size);
+
 #ifndef TORRENT_DISABLE_RESOLVE_COUNTRIES	
 		void set_country(char const* c)
 		{
